# lexicom-test-task

./: README.md
part_one/contacts_api/: .env-example  .gitignore  Dockerfile  Makefile  docker-compose.yml  pyproject.toml
part_one/contacts_api/app/: main.py  settings.py
part_one/contacts_api/app/api/endpoints/: contacts.py
part_one/contacts_api/app/db/: redis.py
part_one/contacts_api/app/schemas/: contacts.py
