[tool.poetry]
name = "phone-api"
version = "0.1.0"
description = ""
authors = ["engineer-alekseev <engineer-alekseev@ya.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.112.1"
redis = "^4.0.0"
pydantic = "^2.8.2"
pydantic-settings = "^2.4.0"
uvicorn = "^0.30.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
